Change secret and token expiration time from local variable to injection from properties file.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.liquibase.change-log=classpath:master.xml
+jwt.accessToken.expirationTime = 900000
+jwt.refreshToken.expirationTime = 3600000
+jwt.secret = QBND!@#sdA679900#@12
